fix header footer alignment for small screen

--- a/src/components/_layout.scss
+++ b/src/components/_layout.scss
@@ -18,7 +18,7 @@ body {
   display: flex;
   background-color: colors.$dark-color;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   position: relative;
 }
@@ -58,7 +58,7 @@ body {
 .header-text {
   font-size: clamp(2em, 5vw, 3em);
   font-weight: 700;
-  padding: 0.25em;
+  padding: 1rem;
 }
 
 .footer-text {
